# caratheodory2

./: CMakeLists.txt  README.md
include/: caratheodory.hpp
src/: caratheodory.cpp  caratheodory_test.cpp
